--- a/src/app/shared/goback/goback.component.html
+++ b/src/app/shared/goback/goback.component.html
@@ -1,4 +1,4 @@
 
-<div   style="text-align: center"  [style.color] ="usercolor"   [style.background]="userBg">
+<div   style="text-align: center"  [style.color] ="userColor"   [style.background]="userBg">
 <button   type="button" class="btn btn-primary btn-block"  (click)=  goBack() >Go Back</button>
 </div>
