--- a/src/app/views/language/language.component.html
+++ b/src/app/views/language/language.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="p-5">
-    <app-goback  [userColor]="'#A52A2A'"  [userBg]="'white'"  (click)= goBack($event)></app-goback>
+    <app-goback   (click)= goBack($event)></app-goback>
     </div>
     
 
