--- a/src/app/views/regionwisecountry-view/regionwisecountry-view.component.html
+++ b/src/app/views/regionwisecountry-view/regionwisecountry-view.component.html
@@ -1,6 +1,6 @@
 
 <div class="m-5">
-    <app-goback  [userColor]="'#A52A2A'"  [userBg]="'white'"  (click)= goBack($event) ></app-goback>
+    <app-goback   (click)= goBack($event) ></app-goback>
 </div>
 <div class="bg">   
 <div class="row container  p-5  "  *ngIf= "countries"   style="margin: 8%" >
