--- a/src/app/views/singlecountry-view/singlecountry-view.component.html
+++ b/src/app/views/singlecountry-view/singlecountry-view.component.html
@@ -180,7 +180,7 @@
            
             
         
-                            <app-goback  [userColor]="'#A52A2A'"  [userBg]="'white'"   (click)= goBack($event)></app-goback>
+                            <app-goback     (click)= goBack($event)></app-goback>
         </div>
       </div>
   </div>
