--- a/src/app/shared/all-countries/all-countries.component.html
+++ b/src/app/shared/all-countries/all-countries.component.html
@@ -4,12 +4,12 @@
 <div class="card"  >
    
   <div class="card-body">
-    <h5 class="card-title">Name: {{name}}</h5>
+    <h5 class="card-title">Country-Name: {{name}}</h5>
     <p class="card-text">Region: {{region}}</p>
-    <p class="card-text"> Capital: {{capital}}</p>
-    <p class="card-text">subregion: {{subregion}}</p>
-    <p class="card-text">{{code}}</p>
-    <p class="card-text">{{language}}</p>
+    <p class="card-text">Capital: {{capital}}</p>
+    <p class="card-text">Subregion: {{subregion}}</p>
+    <p class="card-text">Code: {{code}}</p>
+    <p class="card-text">language: {{language}}</p>
   
   </div>
 </div>
